# ChangeLog for dev-java/plexus-component-api
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  29 May 2007; kiorky <kiorky@cryptelium.net> ChangeLog:
  Adding maven bootstrap flag

  29 May 2007; kiorky <kiorky@cryptelium.net> ChangeLog:
  Adding maven bootstrap flag

  29 May 2007; kiorky <kiorky@cryptelium.net>
  plexus-component-api-1.0_alpha14.ebuild,
  plexus-component-api-1.0_alpha22.ebuild,
  plexus-component-api-1.0_alpha24.ebuild:
  Adding maven bootstrap flag

  19 May 2007; Alistair John Bush <ali_bush@gentoo.org>
  plexus-component-api-1.0_alpha24.ebuild:
  Added to ~amd64, Restricted tests

  07 May 2007; kiorky <kiorky@cryptelium.net>
  +plexus-component-api-1.0_alpha14.ebuild,
  +plexus-component-api-1.0_alpha22.ebuild,
  +plexus-component-api-1.0_alpha24.ebuild,
  -plexus-component-api-1.0.ebuild:
  Adding specific ebuilds beecause of maven wants it

  25 Apr 2007; kiorky <kiorky@cryptelium.net>
  plexus-component-api-1.0.ebuild:
  Migrating to new maven eclass

  17 Apr 2007; kiorky <kiorky@cryptelium.net>
  plexus-component-api-1.0.ebuild:
  Whitespaces again and again

  17 Apr 2007; kiorky <kiorky@cryptelium.net>
  +plexus-component-api-1.0.ebuild, +metadata.xml:
  added as a maven dependency
