@@ -2,6 +2,12 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  02 Jun 2007; kiorky <kiorky@cryptelium.net>
+  plexus-component-api-1.0_alpha14.ebuild,
+  plexus-component-api-1.0_alpha22.ebuild,
+  plexus-component-api-1.0_alpha24.ebuild:
+  moving to JAVA_MAVEN_CLASSPATH
+
   29 May 2007; kiorky <kiorky@cryptelium.net> ChangeLog:
   Adding maven bootstrap flag
 
